tools/astCreator/src/main/java/com/lausdahl/ast/creator/parser/AstcParser.java
// $ANTLR 3.2 Sep 23, 2009 14:05:07 C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g 2011-11-29 13:07:59

package com.lausdahl.ast.creator.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;
@SuppressWarnings("all")
public class AstcParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN", "COLON", "PACKAGES", "AST", "TOKENS", "ASPECT_DCL", "FIELD_DCL", "QUOTE", "COMMENT", "ID", "JAVANAME", "WS", "ESC_SEQ", "NormalChar", "SpecialChar", "'base'", "';'", "'analysis'", "'%'", "'|'", "'#'", "'{'", "'}'", "'['", "']'", "'('", "')'", "'?'", "'*'", "'**'", "'+'", "'||'", "'&&'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int TOKENS=8;
    public static final int NormalChar=17;
    public static final int ID=13;
    public static final int ASPECT_DCL=9;
    public static final int EOF=-1;
    public static final int COLON=5;
    public static final int T__19=19;
    public static final int T__30=30;
    public static final int QUOTE=11;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int ESC_SEQ=16;
    public static final int WS=15;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int JAVANAME=14;
    public static final int SpecialChar=18;
    public static final int ASSIGN=4;
    public static final int PACKAGES=6;
    public static final int AST=7;
    public static final int COMMENT=12;
    public static final int FIELD_DCL=10;

    // delegates
    // delegators


        public AstcParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public AstcParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return AstcParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g"; }


        private boolean mMessageCollectionEnabled = false;
        private boolean mHasErrors = false;
        private List<String> mMessages;
        private List<RecognitionException> mExceptions = new ArrayList<RecognitionException>();

        public boolean hasExceptions()
        {
            return mExceptions.size() > 0;
        }

        public List<RecognitionException> getExceptions()
        {
            return mExceptions;
        }

        public String getErrorMessage(RecognitionException e, String[] tokenNames)
        {
            String msg = super.getErrorMessage(e, tokenNames);
            mExceptions.add(e);
            return msg;
        }

        /**
         *  Switches error message collection on or of.
         *
         *  The standard destination for parser error messages is <code>System.err</code>.
         *  However, if <code>true</code> gets passed to this method this default
         *  behaviour will be switched off and all error messages will be collected
         *  instead of written to anywhere.
         *
         *  The default value is <code>false</code>.
         *
         *  @param pNewState  <code>true</code> if error messages should be collected.
         */
        public void enableErrorMessageCollection(boolean pNewState) {
            mMessageCollectionEnabled = pNewState;
            if (mMessages == null && mMessageCollectionEnabled) {
                mMessages = new ArrayList<String>();
            }
        }
        
        /**
         *  Collects an error message or passes the error message to <code>
         *  super.emitErrorMessage(...)</code>.
         *
         *  The actual behaviour depends on whether collecting error messages
         *  has been enabled or not.
         *
         *  @param pMessage  The error message.
         */
         @Override
        public void emitErrorMessage(String pMessage) {
            mHasErrors=true;
            if (mMessageCollectionEnabled) {
                mMessages.add(pMessage);
            } else {
                super.emitErrorMessage(pMessage);
            }
        }
        
        /**
         *  Returns collected error messages.
         *
         *  @return  A list holding collected error messages or <code>null</code> if
         *           collecting error messages hasn't been enabled. Of course, this
         *           list may be empty if no error message has been emited.
         */
        public List<String> getMessages() {
            return mMessages;
        }
        
        /**
         *  Tells if parsing a Java source has caused any error messages.
         *
         *  @return  <code>true</code> if parsing a Java source has caused at least one error message.
         */
        public boolean hasErrors() {
            return mHasErrors;
        }


    public static class root_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "root"
    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:226:1: root : pkg toks ast aspectdcl ;
    public final AstcParser.root_return root() throws RecognitionException {
        AstcParser.root_return retval = new AstcParser.root_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        AstcParser.pkg_return pkg1 = null;

        AstcParser.toks_return toks2 = null;

        AstcParser.ast_return ast3 = null;

        AstcParser.aspectdcl_return aspectdcl4 = null;



        try {
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:227:3: ( pkg toks ast aspectdcl )
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:227:5: pkg toks ast aspectdcl
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_pkg_in_root416);
            pkg1=pkg();

            state._fsp--;

            adaptor.addChild(root_0, pkg1.getTree());
            pushFollow(FOLLOW_toks_in_root418);
            toks2=toks();

            state._fsp--;

            adaptor.addChild(root_0, toks2.getTree());
            pushFollow(FOLLOW_ast_in_root420);
            ast3=ast();

            state._fsp--;

            adaptor.addChild(root_0, ast3.getTree());
            pushFollow(FOLLOW_aspectdcl_in_root422);
            aspectdcl4=aspectdcl();

            state._fsp--;

            adaptor.addChild(root_0, aspectdcl4.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "root"

    public static class pkg_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pkg"
    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:230:1: pkg : PACKAGES ( 'base' JAVANAME ';' )? ( 'analysis' JAVANAME ';' )? ;
    public final AstcParser.pkg_return pkg() throws RecognitionException {
        AstcParser.pkg_return retval = new AstcParser.pkg_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token PACKAGES5=null;
        Token string_literal6=null;
        Token JAVANAME7=null;
        Token char_literal8=null;
        Token string_literal9=null;
        Token JAVANAME10=null;
        Token char_literal11=null;

        Object PACKAGES5_tree=null;
        Object string_literal6_tree=null;
        Object JAVANAME7_tree=null;
        Object char_literal8_tree=null;
        Object string_literal9_tree=null;
        Object JAVANAME10_tree=null;
        Object char_literal11_tree=null;

        try {
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:231:3: ( PACKAGES ( 'base' JAVANAME ';' )? ( 'analysis' JAVANAME ';' )? )
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:231:5: PACKAGES ( 'base' JAVANAME ';' )? ( 'analysis' JAVANAME ';' )?
            {
            root_0 = (Object)adaptor.nil();

            PACKAGES5=(Token)match(input,PACKAGES,FOLLOW_PACKAGES_in_pkg440); 
            PACKAGES5_tree = (Object)adaptor.create(PACKAGES5);
            root_0 = (Object)adaptor.becomeRoot(PACKAGES5_tree, root_0);

            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:231:15: ( 'base' JAVANAME ';' )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==19) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:231:16: 'base' JAVANAME ';'
                    {
                    string_literal6=(Token)match(input,19,FOLLOW_19_in_pkg444); 
                    string_literal6_tree = (Object)adaptor.create(string_literal6);
                    adaptor.addChild(root_0, string_literal6_tree);

                    JAVANAME7=(Token)match(input,JAVANAME,FOLLOW_JAVANAME_in_pkg446); 
                    JAVANAME7_tree = (Object)adaptor.create(JAVANAME7);
                    adaptor.addChild(root_0, JAVANAME7_tree);

                    char_literal8=(Token)match(input,20,FOLLOW_20_in_pkg448); 

                    }
                    break;

            }

            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:231:40: ( 'analysis' JAVANAME ';' )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==21) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:231:41: 'analysis' JAVANAME ';'
                    {
                    string_literal9=(Token)match(input,21,FOLLOW_21_in_pkg455); 
                    string_literal9_tree = (Object)adaptor.create(string_literal9);
                    adaptor.addChild(root_0, string_literal9_tree);

                    JAVANAME10=(Token)match(input,JAVANAME,FOLLOW_JAVANAME_in_pkg457); 
                    JAVANAME10_tree = (Object)adaptor.create(JAVANAME10);
                    adaptor.addChild(root_0, JAVANAME10_tree);

                    char_literal11=(Token)match(input,20,FOLLOW_20_in_pkg459); 

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "pkg"

    public static class ast_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ast"
    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:234:1: ast : AST ( ( production )* ) ;
    public final AstcParser.ast_return ast() throws RecognitionException {
        AstcParser.ast_return retval = new AstcParser.ast_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token AST12=null;
        AstcParser.production_return production13 = null;


        Object AST12_tree=null;

        try {
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:235:3: ( AST ( ( production )* ) )
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:235:5: AST ( ( production )* )
            {
            root_0 = (Object)adaptor.nil();

            AST12=(Token)match(input,AST,FOLLOW_AST_in_ast478); 
            AST12_tree = (Object)adaptor.create(AST12);
            root_0 = (Object)adaptor.becomeRoot(AST12_tree, root_0);

            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:235:10: ( ( production )* )
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:235:11: ( production )*
            {
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:235:11: ( production )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ID||LA3_0==24) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:235:12: production
            	    {
            	    pushFollow(FOLLOW_production_in_ast483);
            	    production13=production();

            	    state._fsp--;

            	    adaptor.addChild(root_0, production13.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ast"

    public static class toks_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "toks"
    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:238:1: toks : TOKENS ( ( token )* ) ;
    public final AstcParser.toks_return toks() throws RecognitionException {
        AstcParser.toks_return retval = new AstcParser.toks_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token TOKENS14=null;
        AstcParser.token_return token15 = null;


        Object TOKENS14_tree=null;

        try {
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:239:3: ( TOKENS ( ( token )* ) )
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:239:5: TOKENS ( ( token )* )
            {
            root_0 = (Object)adaptor.nil();

            TOKENS14=(Token)match(input,TOKENS,FOLLOW_TOKENS_in_toks501); 
            TOKENS14_tree = (Object)adaptor.create(TOKENS14);
            root_0 = (Object)adaptor.becomeRoot(TOKENS14_tree, root_0);

            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:239:13: ( ( token )* )
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:239:14: ( token )*
            {
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:239:14: ( token )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:239:15: token
            	    {
            	    pushFollow(FOLLOW_token_in_toks506);
            	    token15=token();

            	    state._fsp--;

            	    adaptor.addChild(root_0, token15.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "toks"

    public static class aspectdcl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "aspectdcl"
    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:242:1: aspectdcl : ASPECT_DCL ( aspectdcla ';' )* ;
    public final AstcParser.aspectdcl_return aspectdcl() throws RecognitionException {
        AstcParser.aspectdcl_return retval = new AstcParser.aspectdcl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ASPECT_DCL16=null;
        Token char_literal18=null;
        AstcParser.aspectdcla_return aspectdcla17 = null;


        Object ASPECT_DCL16_tree=null;
        Object char_literal18_tree=null;

        try {
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:243:3: ( ASPECT_DCL ( aspectdcla ';' )* )
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:243:5: ASPECT_DCL ( aspectdcla ';' )*
            {
            root_0 = (Object)adaptor.nil();

            ASPECT_DCL16=(Token)match(input,ASPECT_DCL,FOLLOW_ASPECT_DCL_in_aspectdcl524); 
            ASPECT_DCL16_tree = (Object)adaptor.create(ASPECT_DCL16);
            root_0 = (Object)adaptor.becomeRoot(ASPECT_DCL16_tree, root_0);

            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:243:17: ( aspectdcla ';' )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==22) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:243:18: aspectdcla ';'
            	    {
            	    pushFollow(FOLLOW_aspectdcla_in_aspectdcl528);
            	    aspectdcla17=aspectdcla();

            	    state._fsp--;

            	    adaptor.addChild(root_0, aspectdcla17.getTree());
            	    char_literal18=(Token)match(input,20,FOLLOW_20_in_aspectdcl530); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "aspectdcl"

    public static class aspectdcla_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "aspectdcla"
    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:246:1: aspectdcla : '%' dd ;
    public final AstcParser.aspectdcla_return aspectdcla() throws RecognitionException {
        AstcParser.aspectdcla_return retval = new AstcParser.aspectdcla_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal19=null;
        AstcParser.dd_return dd20 = null;


        Object char_literal19_tree=null;

        try {
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:247:3: ( '%' dd )
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:247:5: '%' dd
            {
            root_0 = (Object)adaptor.nil();

            char_literal19=(Token)match(input,22,FOLLOW_22_in_aspectdcla548); 
            char_literal19_tree = (Object)adaptor.create(char_literal19);
            root_0 = (Object)adaptor.becomeRoot(char_literal19_tree, root_0);

            pushFollow(FOLLOW_dd_in_aspectdcla551);
            dd20=dd();

            state._fsp--;

            adaptor.addChild(root_0, dd20.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "aspectdcla"

    public static class dd_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "dd"
    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:250:1: dd : aspectName ASSIGN ( definitions )* -> ^( ID[\"ASPECT\"] aspectName ( definitions )* ) ;
    public final AstcParser.dd_return dd() throws RecognitionException {
        AstcParser.dd_return retval = new AstcParser.dd_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ASSIGN22=null;
        AstcParser.aspectName_return aspectName21 = null;

        AstcParser.definitions_return definitions23 = null;


        Object ASSIGN22_tree=null;
        RewriteRuleTokenStream stream_ASSIGN=new RewriteRuleTokenStream(adaptor,"token ASSIGN");
        RewriteRuleSubtreeStream stream_aspectName=new RewriteRuleSubtreeStream(adaptor,"rule aspectName");
        RewriteRuleSubtreeStream stream_definitions=new RewriteRuleSubtreeStream(adaptor,"rule definitions");
        try {
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:251:3: ( aspectName ASSIGN ( definitions )* -> ^( ID[\"ASPECT\"] aspectName ( definitions )* ) )
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:251:4: aspectName ASSIGN ( definitions )*
            {
            pushFollow(FOLLOW_aspectName_in_dd567);
            aspectName21=aspectName();

            state._fsp--;

            stream_aspectName.add(aspectName21.getTree());
            ASSIGN22=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_dd569);  
            stream_ASSIGN.add(ASSIGN22);

            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:251:22: ( definitions )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=ID && LA6_0<=JAVANAME)||LA6_0==27||LA6_0==29) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:251:23: definitions
            	    {
            	    pushFollow(FOLLOW_definitions_in_dd572);
            	    definitions23=definitions();

            	    state._fsp--;

            	    stream_definitions.add(definitions23.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);



            // AST REWRITE
            // elements: definitions, aspectName
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 251:37: -> ^( ID[\"ASPECT\"] aspectName ( definitions )* )
            {
                // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:251:40: ^( ID[\"ASPECT\"] aspectName ( definitions )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ID, "ASPECT"), root_1);

                adaptor.addChild(root_1, stream_aspectName.nextTree());
                // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:251:66: ( definitions )*
                while ( stream_definitions.hasNext() ) {
                    adaptor.addChild(root_1, stream_definitions.nextTree());

                }
                stream_definitions.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "dd"

    public static class aspectName_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "aspectName"
    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:254:1: aspectName : ID ( '->' name )* ;
    public final AstcParser.aspectName_return aspectName() throws RecognitionException {
        AstcParser.aspectName_return retval = new AstcParser.aspectName_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID24=null;
        Token string_literal25=null;
        AstcParser.name_return name26 = null;


        Object ID24_tree=null;
        Object string_literal25_tree=null;

        try {
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:255:3: ( ID ( '->' name )* )
            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:255:5: ID ( '->' name )*
            {
            root_0 = (Object)adaptor.nil();

            ID24=(Token)match(input,ID,FOLLOW_ID_in_aspectName602); 
            ID24_tree = (Object)adaptor.create(ID24);
            root_0 = (Object)adaptor.becomeRoot(ID24_tree, root_0);

            // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:255:9: ( '->' name )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==FIELD_DCL) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // C:\\overture\\astV2\\tools\\astCreator\\src\\main\\resources\\Astc.g:255:10: '->' name
            	    {
            	    string_literal25=(Token)match(input,FIELD_DCL,FOLLOW_FIELD_DCL_in_aspectName606); 
            	    string_literal25_tree = (Object)adaptor.create(string_literal25);
            	    adaptor.addChild(root_0, string_literal25_tree);
